# ptz-autotrack

./: .env.example  Dockerfile  FOCUS_REPORT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  config.py  logging_config.py  main.py
app/api/: server.py
app/camera/: rtsp_reader.py
app/control/: control_intent.py  control_logic.py  handoff_manager.py  lifecycle_manager.py  monitoring_policy.py  ptz_client.py  ptz_runtime_state.py  ptz_scheduler.py  smoothing.py  zoom_logic.py
app/detection/: yolo_detector.py
app/models/: runtime.py
app/services/: metrics.py  overlay.py  snapshot_manager.py  tracking_service.py
app/tracking/: appearance_extractor.py  models.py  motion_predictor.py  state_machine.py  target_matcher.py  target_selector.py  tracker.py
app/utils/: geometry.py  throttling.py  timers.py
configs/: config.example.yaml
deploy/systemd/: ptz-autotrack.service
tests/: test_api_server.py  test_config.py  test_control_logic.py  test_geometry.py  test_handoff_manager.py  test_lifecycle_manager.py  test_ptz_client.py  test_ptz_scheduler.py  test_target_matcher.py  test_target_selector.py  test_timers.py  test_tracker.py  test_tracking_service.py  test_tracking_state_machine.py  test_zoom_logic.py
